# Kaspersky_task

./: Dockerfile  Makefile  README.md  docker-compose.yml  env.example  pyproject.toml
.github/workflows/: python-app.yml
src/: main.py
src/api/v1/routes/: report.py
src/application/report/: dto.py  use_cases.py
src/core/: config.py
src/domain/report/: entities.py  services.py
src/infrastructure/cache/: redis_cache.py
src/infrastructure/excel/: report_builder.py
src/infrastructure/messaging/: kafka_consumer.py  kafka_producer.py
src/infrastructure/nlp/: morphology.py
tests/: conftest.py  test_placeholder.py
tests/integration/api/: test_report_export.py
tests/unit/application/: test_use_cases.py
tests/unit/domain/: test_entities.py  test_services.py
tests/unit/infrastructure/: test_morphology.py  test_report_builder.py
