[tool.poetry]
name = "kaspersky-task"
version = "0.1.0"
description = ""
authors = ["r.bagymanov <ruslanbagymanov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.8"
uvicorn = "^0.34.0"
pymorphy3 = "^2.0.6"
openpyxl = "^3.1.5"
redis = "^7.3.0"
aiokafka = "^0.13.0"
python-multipart = "^0.0.22"

[tool.poetry.group.dev.dependencies]
black = "^26.3.1"
ruff = "^0.15.6"
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
mypy = "^1.19.1"
pytest-deadfixtures = "^3.1.0"
pydantic-settings = "^2.13.1"
pytest-asyncio = "^1.3.0"
httpx = "^0.28.1"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
